# bdns-plus

./: .gitignore  README.md  compare-ifc4_3.html  config-custom.html  config-default.html  customisations.html  default-tags.html  defaults.html  delete.toml  discussion.html  examples.html  index.html  object-map.html  pyproject.toml  revit.html  ruff.toml  search.json  serialisation.html  standard.html  tag-builder.html  tags.html  test.html  volumes-and-levels.html
.github/workflows/: build-docs.yml
docs/: _quarto.yml  _variables.yml  compare-ifc4_3.qmd  config-custom.qmd  customisations.py  customisations.qmd  default-tags.qmd  defaults.qmd  discussion.qmd  index.qmd  standard.qmd  summarise-default-config.qmd  tag-builder.py  tags.py  test.py  volumes-and-levels.qmd
docs/.ipynb_checkpoints/: _quarto-checkpoint.yml  examples-checkpoint.qmd
docs/examples/: J7763-config-example.py  _utils.py  custom-nomenclature-for-vent-equipment.py  custom-project-example.qmd  custom-tag-format.py  custom-volume-and-level-codes.py  electrical.qmd  index.qmd  no-config-multi-volume.py  no-config-single-volume.py  reformat-type-and-instance-tags.py  single-volume-mezzanine-levels.py
examples/: J7763-config-example.html  custom-nomenclature-for-vent-equipment.html  custom-project-example.html  custom-tag-format.html  custom-volume-and-level-codes.html  index.html  no-config-multi-volume.html  no-config-single-volume.html  reformat-type-and-instance-tags.html  single-volume-mezzanine-levels.html  single-volume.html
scripts/example/: levels.csv
src/bdns_plus/: _utils.py  abbreviations.py  config.py  default_fields.py  docs.py  env.py  gen_idata.py  gen_levels_volumes.py  ifc.py  iref.py  iref_io.py  models.py  tag.py  ui.py
src/bdns_plus/examples/: __init__.py  no_config.py
tests/: test_abbreviations.py  test_config.py  test_env.py  test_iref.py  test_iref_io.py  test_models.py  test_tag.py  test_ui.py
