[project]
authors = [{name = "jgunstone", email = "j.gunstone@maxfordham.com"}]
description = "bdns references + configurable equipment references for drawings"
name = "bdns-plus"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pytest-examples>=0.0.15,<0.0.16", "notebook-intelligence>=1.3.4,<2", "jupyterlab-myst>=2.4.2,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
bdns_plus = { path = ".", editable = true }

[tool.pixi.feature.docs.dependencies]
jupyterlab = { version = ">=4.0.0,<5"}
quarto = ">=1.6.40,<2"
jupytext = ">=1.17.0,<2"
pandas = "*"
great_tables = ">=0.17.0,<0.18"
ipywidgets = ">=8.1.5,<9"
itables = ">=2.3.0,<3"
anywidget = ">=0.9.18,<0.10"

[tool.pixi.feature.docs.pypi-dependencies]
jupyterlab-quarto = { version = ">=0.3.4,<0.4"}
bsdd = { version = ">=0.8.1,<0.9"}

[tool.pixi.feature.package.dependencies]
hatch = "*"

[tool.pixi.environments]
docs = ["docs"]
package = {features = ["package"], no-default-feature = true}

[tool.pixi.tasks]
tests = "pytest"
delete-docs = "rm -r docs/_site"

[tool.pixi.feature.docs.tasks]
jlab = { cmd = "jupyter lab", cwd = "docs" }
render = { cmd = "quarto render .", cwd = "docs" }
preview = { cmd = "quarto preview .", cwd = "docs" }

[tool.pixi.feature.package.tasks]
build = "hatch build"
# publish = "hatch publish -u __token__ -a <your-pypi-token>"
# ship  = {depends-on = ["build", "publish"]}

[tool.pixi.dependencies]
frictionless = ">=5.18.0,<6"
pydantic = ">=2.10.6,<3"
annotated-types = ">=0.7.0,<0.8"
pytest = "*"
pydantic-extra-types = ">=2.10.2,<3"
pycountry = ">=24.6.1,<25"
pydantic-settings = ">=2.8.0,<3"

[dependency-groups]
docs = ["jsonschema2md>=1.5.2,<2"]


